--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <h1>404</h1>
-    <p>Oops! The page you are looking for does not exist.</p>
+    <p>Oops! The page you are looking for does not exist or was denied.</p>
     <p><a href="/">Go back to the homepage</a></p>
 </body>
 </html>
